crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__adjacent_control_flow_and_keyed_pattern_dom_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: dom_output(CONTROL_FLOW)
---
errors=[]
components=[]
preamble=
const { toDisplayString: _toDisplayString, createElementVNode: _createElementVNode, normalizeClass: _normalizeClass, openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, renderList: _renderList } = Vue

code=
function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, [
    (aside)
      ? (_openBlock(), _createElementBlock("aside", { key: 0 }, "Aside"))
      : _createCommentVNode("v-if", true),
    _createElementVNode("ul", null, [
      (() => { const __vize_match_0 = ((__vize_match_0_0) => { a0: { if (__vize_match_0_0 !== 'ready') break a0; return [0]; } return [1]; })(status); return (__vize_match_0[0] === 0)
        ? (_openBlock(true), _createElementBlock(_Fragment, { key: item.id }, _renderList(items, (item) => {
          return (_openBlock(), _createElementBlock("li", { class: _normalizeClass(item.kind) }, _toDisplayString(item.label), 3 /* TEXT, CLASS */))
        }), 256 /* UNKEYED_FRAGMENT */))
        : (__vize_match_0[0] === 1)
          ? (_openBlock(), _createElementBlock("li", { key: 2 }, "Empty"))
        : _createCommentVNode("v-if", true) })()
    ]),
    _createElementVNode("p", null, "Last")
  ]))
}
