crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__adjacent_control_flow_and_keyed_pattern_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(CONTROL_FLOW)
---
errors=[]
templates=["<aside>Aside</aside>", "<li> </li>", "<li>Empty</li>", "<div><!----><ul></ul><p>Last</p></div>"]
code=
import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, computed as _computed, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<aside>Aside</aside>", true)
const t1 = _template("<li> </li>")
const t2 = _template("<li>Empty</li>")
const t3 = _template("<div><!----><ul></ul><p>Last</p></div>", true)

export function render(_ctx) {
  const n1 = t3()
  const n2 = _child(n1)
  const n0 = _next(_child(n1))
  _setInsertionState(n1, n2)
  const n3 = _createIf(() => (_ctx.aside), () => {
    const n5 = t0()
    return n5
  })
  _setInsertionState(n0)
  const n6 = ((_for_item0) => {
    const n8 = _createIf(() => (_for_item0.value[0] === 0), () => {
      const n10 = _createFor(() => (_ctx.items), (_for_item1) => {
        const n12 = t1()
        const x12 = _txt(n12)
        _renderEffect(() => {
          _setClass(n12, _for_item1.value.kind)
          _setText(x12, _toDisplayString(_for_item1.value.label))
        })
        return n12
      })
      return n10
    }, () => _createIf(() => (_for_item0.value[0] === 1), () => {
      const n14 = t2()
      return n14
    }))
    return n8
  })(_computed(() => (((__vize_match_0_0) => { a0: { if (__vize_match_0_0 !== 'ready') break a0; return [0]; } return [1]; })(_ctx.status))))
  return n1
}
