crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__dynamic_sibling_inside_patterned_template_dom_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: dom_output(DYNAMIC_SIBLING)
---
errors=[]
components=[]
preamble=
const { toDisplayString: _toDisplayString, createElementVNode: _createElementVNode, normalizeClass: _normalizeClass, openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, renderList: _renderList } = Vue

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("li", null, "Ready")

code=
function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, [
    _createElementVNode("ul", null, [
      (_openBlock(true), _createElementBlock(_Fragment, null, _renderList([((__vize_match_0_select_0) => { { const __vize_match_0_select_1 = (() => { if (!(__vize_match_0_select_0 === 'ready')) return null;  {  return [0]; } })(); if (__vize_match_0_select_1 !== null) return __vize_match_0_select_1; } return [-1]; })((status))], (__vize_match_0) => {
        return (_openBlock(), _createElementBlock(_Fragment, null, [
          (__vize_match_0[0] === 0)
            ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [
              _hoisted_1
            ], 64 /* STABLE_FRAGMENT */))
            : _createCommentVNode("v-if", true),
          _createElementVNode("li", { id: plainId }, [
            _createElementVNode("span", null, _toDisplayString(label), 1 /* TEXT */)
          ], 8 /* PROPS */, ["id"])
        ], 64 /* STABLE_FRAGMENT */))
      }), 256 /* UNKEYED_FRAGMENT */))
    ]),
    _createElementVNode("footer", {
      class: _normalizeClass(cls)
    }, "Tail", 2 /* CLASS */)
  ]))
}
