crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__dynamic_sibling_inside_patterned_template_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(DYNAMIC_SIBLING)
---
errors=[]
templates=["<li>Ready</li>", "<li><span> </span></li>", "<div><ul></ul><footer>Tail</footer></div>"]
code=
import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setProp as _setProp, computed as _computed, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>")
const t1 = _template("<li><span> </span></li>")
const t2 = _template("<div><ul></ul><footer>Tail</footer></div>", true)

export function render(_ctx) {
  const n2 = t2()
  const n0 = _child(n2)
  const n1 = _next(n0)
  _setInsertionState(n0)
  const n3 = ((_for_item0) => {
    const n5 = _createIf(() => (_for_item0.value[0] === 0), () => {
      const n7 = t0()
      return n7
    })
    const n9 = t1()
    const n8 = _child(n9)
    const x8 = _txt(n8)
    _renderEffect(() => {
      _setProp(n9, "id", _ctx.plainId)
      _setText(x8, _toDisplayString(_ctx.label))
    })
    return [n5, n9]
  })(_computed(() => (((__vize_match_0_0) => { a0: { if (__vize_match_0_0 !== 'ready') break a0; return [0]; } return [-1]; })(_ctx.status))))
  _renderEffect(() => _setClass(n1, _ctx.cls))
  return n2
}
