crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__nested_patterned_template_child_dom_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: dom_output(NESTED)
---
errors=[]
components=[]
preamble=
const { createElementVNode: _createElementVNode, normalizeClass: _normalizeClass, openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, renderList: _renderList } = Vue

code=
function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, [
    _createElementVNode("section", null, [
      (_openBlock(true), _createElementBlock(_Fragment, null, _renderList([outer], (__vize_match) => {
        return (_openBlock(), _createElementBlock(_Fragment, null, [
          ((__vize_match) === ('open'))
            ? (_openBlock(), _createElementBlock("ul", { key: 0 }, [
              (_openBlock(true), _createElementBlock(_Fragment, null, _renderList([inner], (__vize_match) => {
                return (_openBlock(), _createElementBlock(_Fragment, null, [
                  ((__vize_match) === ('x'))
                    ? (_openBlock(), _createElementBlock("li", { key: 0 }, "X"))
                    : (_openBlock(), _createElementBlock("li", { key: 1 }, "Inner fallback"))
                ], 64 /* STABLE_FRAGMENT */))
              }), 256 /* UNKEYED_FRAGMENT */))
            ]))
            : (_openBlock(), _createElementBlock("p", { key: 1 }, "Outer fallback"))
        ], 64 /* STABLE_FRAGMENT */))
      }), 256 /* UNKEYED_FRAGMENT */))
    ]),
    _createElementVNode("footer", {
      class: _normalizeClass(cls)
    }, "tail", 2 /* CLASS */)
  ]))
}
