crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__nested_patterned_template_child_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(NESTED)
---
errors=[]
templates=["<li>X</li>", "<li>Inner fallback</li>", "<ul></ul>", "<p>Outer fallback</p>", "<div><section></section><footer>tail</footer></div>"]
code=
import { child as _child, next as _next, setClass as _setClass, computed as _computed, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>X</li>")
const t1 = _template("<li>Inner fallback</li>")
const t2 = _template("<ul></ul>")
const t3 = _template("<p>Outer fallback</p>")
const t4 = _template("<div><section></section><footer>tail</footer></div>", true)

export function render(_ctx) {
  const n2 = t4()
  const n0 = _child(n2)
  const n1 = _next(n0)
  _setInsertionState(n0)
  const n3 = ((_for_item0) => {
    const n5 = _createIf(() => (_for_item0.value[0] === 0), () => {
      const n7 = t2()
      _setInsertionState(n7)
      const n8 = ((_for_item1) => {
        const n10 = _createIf(() => (_for_item1.value[0] === 0), () => {
          const n12 = t0()
          return n12
        }, () => _createIf(() => (_for_item1.value[0] === 1), () => {
          const n14 = t1()
          return n14
        }))
        return n10
      })(_computed(() => (((__vize_match_1_0) => { a0: { if (__vize_match_1_0 !== 'x') break a0; return [0]; } return [1]; })(_ctx.inner))))
      return n7
    }, () => _createIf(() => (_for_item0.value[0] === 1), () => {
      const n16 = t3()
      return n16
    }))
    return n5
  })(_computed(() => (((__vize_match_0_0) => { a0: { if (__vize_match_0_0 !== 'open') break a0; return [0]; } return [1]; })(_ctx.outer))))
  _renderEffect(() => _setClass(n1, _ctx.cls))
  return n2
}
