crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__nested_text_run_inside_patterned_template_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(TEXT_RUN)
---
errors=[]
templates=["<li>Ready</li>", "Before ", " ", " after", "<div><ul></ul><footer>Tail</footer></div>"]
code=
import { child as _child, next as _next, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, computed as _computed, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>")
const t1 = _template("Before ")
const t2 = _template(" ")
const t3 = _template(" after")
const t4 = _template("<div><ul></ul><footer>Tail</footer></div>", true)

export function render(_ctx) {
  const n2 = t4()
  const n0 = _child(n2)
  const n1 = _next(n0, 1)
  _setInsertionState(n0)
  const n3 = ((_for_item0) => {
    const n8 = t1()
    const n9 = t2()
    const n10 = t3()
    const n5 = _createIf(() => (_for_item0.value[0] === 0), () => {
      const n7 = t0()
      return n7
    })
    _renderEffect(() => _setText(n9, _toDisplayString(_ctx.label)))
    return [n5, n8, n9, n10]
  })(_computed(() => (((__vize_match_0_0) => { a0: { if (__vize_match_0_0 !== 'ready') break a0; return [0]; } return [-1]; })(_ctx.status))))
  _renderEffect(() => _setClass(n1, _ctx.cls))
  return n2
}
