crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__patterned_template_child_dom_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: dom_output(V_MATCH)
---
errors=[]
components=[]
preamble=
const { toDisplayString: _toDisplayString, createElementVNode: _createElementVNode, openBlock: _openBlock, createElementBlock: _createElementBlock, Fragment: _Fragment, createCommentVNode: _createCommentVNode, renderList: _renderList } = Vue

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("li", null, "Ready")
const _hoisted_2 = /*#__PURE__*/ _createElementVNode("li", null, "Plain")

code=
function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, [
    _createElementVNode("ul", null, [
      (_openBlock(true), _createElementBlock(_Fragment, null, _renderList([((__vize_match_0_select_0) => { { const __vize_match_0_select_1 = (() => { if (!(__vize_match_0_select_0 === 'ready')) return null;  {  return [0]; } })(); if (__vize_match_0_select_1 !== null) return __vize_match_0_select_1; } return [-1]; })((status
))], (__vize_match_0) => {
        return (_openBlock(), _createElementBlock(_Fragment, null, [
          (__vize_match_0[0] === 0)
            ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [
              _hoisted_1
            ], 64 /* STABLE_FRAGMENT */))
            : _createCommentVNode("v-if", true),
          _hoisted_2
        ], 64 /* STABLE_FRAGMENT */))
      }), 256 /* UNKEYED_FRAGMENT */))
    ]),
    _createElementVNode("span", null, _toDisplayString(x), 1 /* TEXT */)
  ]))
}
