crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__patterned_template_child_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(V_MATCH)
---
errors=[]
templates=["<li>Ready</li>", "<li>Plain</li>", "<div><ul></ul><span> </span></div>"]
code=
import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, computed as _computed, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>")
const t1 = _template("<li>Plain</li>")
const t2 = _template("<div><ul></ul><span> </span></div>", true)

export function render(_ctx) {
  const n2 = t2()
  const n0 = _child(n2)
  const n1 = _next(n0)
  const x1 = _txt(n1)
  _setInsertionState(n0)
  const n3 = ((_for_item0) => {
    const n5 = _createIf(() => (_for_item0.value[0] === 0), () => {
      const n7 = t0()
      return n7
    })
    const n8 = t1()
    return [n5, n8]
  })(_computed(() => (((__vize_match_0_0) => { a0: { if (__vize_match_0_0 !== 'ready') break a0; return [0]; } return [-1]; })(_ctx.status))))
  _renderEffect(() => _setText(x1, _toDisplayString(_ctx.x)))
  return n2
}
