crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_template_children__separated_text_runs_inside_patterned_template_vapor_output.snap
---
source: crates/vize_atelier_vapor/src/tests_template_children.rs
expression: vapor_output(SEPARATED_TEXT_RUNS)
---
errors=[]
templates=["<li>Ready</li>", "Before ", " ", "<em>mid</em>", "After ", " ", "<div><ul></ul></div>"]
code=
import { child as _child, toDisplayString as _toDisplayString, setText as _setText, computed as _computed, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<li>Ready</li>")
const t1 = _template("Before ")
const t2 = _template(" ")
const t3 = _template("<em>mid</em>")
const t4 = _template("After ")
const t5 = _template(" ")
const t6 = _template("<div><ul></ul></div>", true)

export function render(_ctx) {
  const n1 = t6()
  const n0 = _child(n1)
  _setInsertionState(n0)
  const n2 = ((_for_item0) => {
    const n7 = t1()
    const n8 = t2()
    const n9 = t3()
    const n10 = t4()
    const n11 = t5()
    const n4 = _createIf(() => (_for_item0.value[0] === 0), () => {
      const n6 = t0()
      return n6
    })
    _renderEffect(() => {
      _setText(n8, _toDisplayString(_ctx.a))
      _setText(n11, _toDisplayString(_ctx.b))
    })
    return [n4, n7, n8, n9, n10, n11]
  })(_computed(() => (((__vize_match_0_0) => { a0: { if (__vize_match_0_0 !== 'ready') break a0; return [0]; } return [-1]; })(_ctx.status))))
  return n1
}
